<resources>
    <string name="app_name">Ser</string>
    <string name="PROF">الملف المستخدم</string>
    <string name="PASS">كلمة المرور</string>
    <string name="USER">اسم المستخدم</string>
    <string name="ip">عنوان ip</string>
    <string name="user">المستخدم</string>
    <string name="pass">كلمة المرور</string>
    <string name="log">دخول</string>
    <string name="cmd">سطر الاوامر</string>
    <string name="cpu">المعالج</string>
    <string name="va">القيمة</string>
    <string name="se">ارسال الامر</string>
    <string name="cm">الامر</string>
    <string name="disconnect">disconnect</string>
    <string name="gen">انتاج مستخدمي يوزرماناجر</string>
    <string name="lan1">L1</string>
    <string name="lan2">L2</string>
    <string name="lan3">L3</string>
    <string name="lan4">L4</string>
    <string name="lan5">L5</string>
    <string name="lan6">L6</string>
    <string name="lan7">L7</string>
    <string name="lan8">L8</string>
    <string name="lan9">L9</string>
    <string name="lan10">L10</string>
    <string name="lan11">L11</string>
    <string name="lan12">L12</string>
    <string name="lan13">L13</string>
    <string name="uac">عدد المستخدمين</string>
    <string name="utall">طول اسم المستخدم</string>
    <string name="preuser">بادئة اسم المستخدم</string>
    <string name="passtall">طول كلمة المرور</string>
    <string name="genera">انتاج</string>
    <string name="upt">وقت التشغيل</string>
    <string name="volt">فولط البطارية</string>
    <string name="runbrow">تشغيل المستعرض</string>
    <string name="saveb">حفظ معلومات الدخول</string>
    <string name="nova">#null</string>
    <string name="dele">حذف معلومات الدخول</string>
    <string name="log_">#logs</string>
    <string name="app_namex">حفظ باستخدام</string>
</resources>