<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/abc_vector_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/d4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/d5">

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/teal_700"
            android:padding="@dimen/d4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/d4">

            <LinearLayout
                android:layoutDirection="ltr"
                android:background="@color/cardview_light_background"
                android:orientation="horizontal"
                android:padding="@dimen/d4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d4"
                tools:targetApi="jelly_bean_mr1">

                <RadioButton
                    android:buttonTint="@color/orange"
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lan1"
                    android:layout_weight="0.2"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:buttonTint="@color/orange"
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lan2"
                    android:layout_weight="0.2"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:buttonTint="@color/orange"
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lan3"
                    android:layout_weight="0.2"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:buttonTint="@color/orange"
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lan4"
                    android:layout_weight="0.2"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:buttonTint="@color/orange"
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lan5"
                    android:layout_weight="0.2"
                    tools:ignore="UnusedAttribute" />

            </LinearLayout>

            <LinearLayout
                android:layoutDirection="ltr"
                android:background="@color/cardview_light_background"
                android:orientation="horizontal"
                android:padding="@dimen/d4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                tools:targetApi="jelly_bean_mr1">

                <RadioButton
                    android:buttonTint="@color/red"
                    android:id="@+id/radioButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lan6"
                    android:layout_weight="0.2"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:buttonTint="@color/red"
                    android:id="@+id/radioButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lan7"
                    android:layout_weight="0.2"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:buttonTint="@color/red"
                    android:id="@+id/radioButton8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lan8"
                    android:layout_weight="0.2"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:buttonTint="@color/red"
                    android:id="@+id/radioButton9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lan9"
                    android:layout_weight="0.2"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:buttonTint="@color/red"
                    android:id="@+id/radioButton10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lan10"
                    android:layout_weight="0.2"
                    tools:targetApi="lollipop" />

            </LinearLayout>

            <LinearLayout
                android:layoutDirection="ltr"
                android:background="@color/cardview_light_background"
                android:orientation="horizontal"
                android:padding="@dimen/d4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                tools:targetApi="jelly_bean_mr1">

                <RadioButton
                    android:buttonTint="@color/purple_500"
                    android:id="@+id/radioButton11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lan11"
                    android:layout_weight="0.3"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:buttonTint="@color/purple_500"
                    android:id="@+id/radioButton12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lan12"
                    android:layout_weight="0.4"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:buttonTint="@color/purple_500"
                    android:id="@+id/radioButton13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lan13"
                    android:layout_weight="0.3"
                    tools:targetApi="lollipop" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:padding="@dimen/d4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d4"
            android:layout_marginBottom="@dimen/d4">

            <TextView
                android:textColor="#c22c44"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cpu"
                android:layout_weight="0.3"/>
            <TextView android:textColor="#c22c44"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/upt"
                android:layout_weight="0.3"/>

            <TextView android:textColor="#c22c44"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/volt"
                android:layout_weight="0.3"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:textColor="#c22c44"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/cpu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"/>

            <TextView
                android:textColor="#c22c44"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/uptime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"/>

            <TextView
                android:textColor="#c22c44"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/voltage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"/>

        </LinearLayout>

        <Button
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:id="@+id/commandact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/cmd"
            tools:targetApi="lollipop" />

        <Button
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:id="@+id/usergenact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/gen"
            tools:targetApi="lollipop" />

        <Button android:textColor="@color/white"
            android:id="@+id/logger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/runbrow"/>

        <ListView
            android:id="@+id/liste"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tdis"
        android:src="@drawable/avatarx"
        android:contentDescription="@string/app_name" />

    <TextView
        android:textColor="@color/red"
        android:background="@color/white"
        android:id="@+id/tdis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textDirection="ltr"
        android:text="@string/disconnect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UnusedAttribute" />
</androidx.constraintlayout.widget.ConstraintLayout>
