<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <androidx.recyclerview.widget.RecyclerView

            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d4" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cc"
           app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/d4"
            app:cardElevation="@dimen/d4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/c1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/white"
            android:id="@+id/warn"
            android:background="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d4"/>
                <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/d4"
                    app:layout_constraintTop_toBottomOf="@id/warn"
                    app:layout_constraintBottom_toTopOf="@id/c2"
                    android:id="@+id/c1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="@dimen/d4"
                    app:cardCornerRadius="@dimen/d4">


                <MultiAutoCompleteTextView
            android:background="@color/white"
            android:textColor="@color/orange"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/command"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cm"
            android:layout_margin="@dimen/d4"
            android:fontFamily="serif-monospace"
            style="@style/TextAppearance.AppCompat.Display1"
            android:autofillHints="@string/app_name"
            android:inputType="text" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/d4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/c1"
                    android:id="@+id/c2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/d4"
                    app:cardElevation="@dimen/d4">

                <EditText
                    android:layout_margin="@dimen/d4"
                    android:background="@color/white"
                    android:textColor="@color/red"
                    android:id="@+id/key"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints="@string/app_name"
                    android:focusableInTouchMode="true"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center"
                    android:hint="@string/va"
                    android:inputType="text" />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/red"
            android:id="@+id/sendcomm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/se"
            android:layout_marginBottom="@dimen/d4"
            android:fontFamily="serif-monospace"/>

</androidx.constraintlayout.widget.ConstraintLayout>
